--- a/bower.json
+++ b/bower.json
@@ -20,5 +20,8 @@
     "bootstrap": "^3",
     "jquery": "^3",
     "owl.carousel": "^2.2.1"
+  },
+  "dependencies": {
+    "lightgallery": "^1.6.7"
   }
 }
