--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "gulp": "^3.9.1",
     "gulp-sass": "^3.1.0",
+    "lightslider": "^1.1.6",
     "owl.carousel": "^2.2.0"
   },
   "devDependencies": {
